# rust-mysql-insert-test

./: Cargo.toml  README.md
src/: main.rs
